traffic-management-demo/shifting-demo/virtual-service-mono-traffic.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: demo-app-mono
  namespace: demo
  labels:
    policyResource: "true"
spec:
  hosts:
    - demo-app.demo.svc.cluster.local
  http:
    - route:
        - destination:
            host: demo-app.demo.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: demo-app.demo.svc.cluster.local
            subset: v2
